prost-canonical-serde/tests/ui/deny_unknown_fields_with_flatten.stderr
error: deny_unknown_fields is not supported with flatten
  --> tests/ui/deny_unknown_fields_with_flatten.rs:12:1
   |
12 | #[serde(deny_unknown_fields)]
   | ^
